ground_ture_logs/rust/Stack/sum_1.rs.log
Command: verifast /app/ground_true/rust/Stack/sum_1.rs
Exit code: 1
--- STDOUT ---
error[E0412]: cannot find type `Node` in this scope
 --> /app/ground_true/rust/Stack/sum_1.rs:1:37
  |
1 | unsafe fn get_nodes_sum(nodes: *mut Node) -> i32
  |                                     ^^^^ not found in this scope

error[E0412]: cannot find type `Stack` in this scope
  --> /app/ground_true/rust/Stack/sum_1.rs:14:6
   |
14 | impl Stack {
   |      ^^^^^ not found in this scope

error[E0412]: cannot find type `Stack` in this scope
  --> /app/ground_true/rust/Stack/sum_1.rs:15:31
   |
15 | unsafe fn get_sum(stack: *mut Stack) -> i32
   |                               ^^^^^ not found in this scope

warning: type annotations needed
 --> /app/ground_true/rust/Stack/sum_1.rs:7:11
  |
7 | if !nodes.is_null() {
  |           ^^^^^^^
  |
  = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
  = note: for more information, see issue #46906 <https://github.com/rust-lang/rust/issues/46906>
  = note: `#[warn(tyvar_behind_raw_pointer)]` (part of `#[warn(rust_2018_compatibility)]`) on by default

warning: function cannot return without recursing
  --> /app/ground_true/rust/Stack/sum_1.rs:27:1
   |
27 | fn VeriFast_alloc<T>() -> *mut T { VeriFast_alloc() }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   ---------------- recursive call site
   | |
   | cannot return without recursing
   |
   = help: a `loop` may express intention better if this is on purpose
   = note: `#[warn(unconditional_recursion)]` on by default

error: aborting due to 3 previous errors; 2 warnings emitted

For more information about this error, try `rustc --explain E0412`.

--- STDERR ---

Result: FAIL
